--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
+    "typescript": "4.1.3",
+    "@netlify/plugin-nextjs": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
